changed the whole html and added querying functions

--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 SpaceX Data Representation Test Project</p>
+        <p>&copy; 2024 SpaceX Data Representation Project</p>
     </footer>
+
+    <div id="launchDetailsModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div id="launchDetails">
+                <!-- Launch details will be dynamically inserted here -->
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
